# rope_sim_mujoco

./: .gitignore  MUJOCO_LOG.TXT  README.md  carne_demo2.py  main.py  pyproject.toml
examples/: crane_demo.py  rope_joint_demo.py  rope_with_clamp.py  sim_plt.py  simple_crane.py  simple_rope.py
rope_sim/: __init__.py  physics.py  utils.py  visualization.py
rope_sim_Joint/: __init__.py  rope_sim_Joint.py
