[project]
name = "rope-sim"
version = "0.1.0"
description = "A simple rope physics simulation library using Position-Based Dynamics (PBD) with MuJoCo visualization"
requires-python = ">=3.8"
authors = [
  { name = "Anonymous", email = "anonymous@example.com" },
]
dependencies = [
  "mujoco>=3.0.0",
  "numpy>=1.20.0",
  "glfw>=2.5.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Games/Entertainment :: Simulation",
]

[project.urls]
"Homepage" = "https://github.com/your-username/rope-sim"
"Repository" = "https://github.com/your-username/rope-sim"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["."]
include = ["rope_sim*"]
